# agent-memory-contracts

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  RESULTS.md  RESULTS_diff.md  RESULTS_fingerprint.md  RESULTS_merge.md  common.py  run_all.py  time_diff.py  time_fingerprint.py  time_merge.py
docs/: STABILITY.md  architecture.md  migration.md  migration_example.py
docs/specs/: DECISIONS.md  sprint_21_conflict_resolution.md  sprint_22_citation_graph.md  sprint_23_access_control.md  sprint_24a_embedding_input.md  sprint_24b_schema_migration.md  sprint_24c_context_pack_compiler.md  sprint_24d_end_to_end_demo.md  sprint_25_langchain_memory.md  sprint_26_mcp_server.md  sprint_27_decay.md  sprint_v100_final_stability.md
examples/: access.py  citations.py  company_brain_demo.py  compilation.py  conflict_resolution.py  decay.py  embedding.py  extract_taste_cards.py  langchain_memory.py  mcp_server.py  migrations.py  quickstart.py  reference_reducer.py
scripts/: audit_public_api.py
src/agent_memory_contracts/: __init__.py  __main__.py  access.py  bundle_diff.py  bundles.py  candidate_contracts.py  candidate_ids.py  citations.py  compilation.py  conflict.py  contextpack_contracts.py  contextpack_ids.py  contextpack_validation.py  decay.py  embedding.py  evidence_contracts.py  evidence_ids.py  hygiene.py  jsonschema_validator.py  ledger_contracts.py  ledger_ids.py  merge.py  migrations.py  state_contracts.py  state_ids.py  state_queries.py  taste_contracts.py  taste_ids.py
src/agent_memory_contracts/integrations/: __main__.py  langchain.py  mcp.py
src/agent_memory_contracts/schemas/: candidate_claim.schema.json  candidate_decision.schema.json  candidate_preference.schema.json  candidate_task.schema.json  candidate_taste_signal.schema.json  context_pack.schema.json  context_pack_build_receipt.schema.json  context_pack_validation_report.schema.json  core_state_delta_proposal.schema.json  core_state_snapshot.schema.json  decision_ledger_entry.schema.json  episode_record.schema.json  evidence_span.schema.json  fact_ledger_entry.schema.json  memory_reducer_decision.schema.json  preference_ledger_entry.schema.json  project_state_delta_proposal.schema.json  project_state_snapshot.schema.json  source_record.schema.json  state_reducer_decision.schema.json  taste_card.schema.json  taste_delta_proposal.schema.json  taste_reducer_decision.schema.json
tests/: __init__.py  fixtures.py  test_access.py  test_bundle_diff.py  test_bundles.py  test_candidate.py  test_citations.py  test_cli.py  test_cli_hygiene.py  test_cli_json.py  test_cli_merge.py  test_compilation.py  test_conflict.py  test_contextpack.py  test_decay.py  test_embedding.py  test_evidence.py  test_hygiene.py  test_integrations_langchain.py  test_integrations_mcp.py  test_jsonschema_validator.py  test_ledger.py  test_merge.py  test_migration_example.py  test_migrations.py  test_reference_reducer.py  test_state.py  test_taste.py
