[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-contracts"
version = "0.1.0"
description = "JSON Schemas and Python contracts for AI agent memory integrity: evidence, candidate, ledger, taste, state, and ContextPack planes."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "eoniclife", email = "avsingkernel@users.noreply.github.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "schema",
    "contracts",
    "second-brain",
    "knowledge-graph",
    "taste-cards",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []  # standard-library only

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/eoniclife/agent-memory-contracts"
Issues = "https://github.com/eoniclife/agent-memory-contracts/issues"
Source = "https://github.com/eoniclife/agent-memory-contracts"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_memory_contracts = ["schemas/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"
