[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-contracts"
version = "1.0.2"
description = "JSON Schemas and Python contracts for AI agent memory integrity: evidence, candidate, ledger, taste, state, and ContextPack planes."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "eoniclife", email = "avsingkernel@users.noreply.github.com" },
]
keywords = [
    "ai",
    "agents",
    "memory",
    "llm",
    "schema",
    "contracts",
    "second-brain",
    "knowledge-graph",
    "taste-cards",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = []  # standard-library only

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.10",
]
jsonschema = [
    "jsonschema>=4.0",
]
langchain = [
    "langchain-classic>=1.0",
]
mcp = [
    "fastmcp>=2.0",
]
all = [
    "agent-memory-contracts[jsonschema,langchain,mcp]",
]

[project.scripts]
agent-memory-contracts = "agent_memory_contracts.__main__:main"

[project.urls]
Homepage = "https://github.com/eoniclife/agent-memory-contracts"
Issues = "https://github.com/eoniclife/agent-memory-contracts/issues"
Source = "https://github.com/eoniclife/agent-memory-contracts"
Changelog = "https://github.com/eoniclife/agent-memory-contracts/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_memory_contracts = ["schemas/*.json", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
files = ["src/agent_memory_contracts"]

# Tests and examples are not part of the published library API
# surface and are excluded from strict type-checking.
[[tool.mypy.overrides]]
module = ["tests.*", "examples.*"]
ignore_errors = true
